# libswe-rs

./: .gitignore  Cargo.toml  README.md
libswe/: Cargo.toml
libswe-sys/: Cargo.toml
libswe-sys/src/: lib.rs  wrapper.h
libswe/examples/: coretest.rs  swetest.rs
libswe/src/: core.rs  lib.rs
